eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/EventRollback__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductEventDirector__c</fullName>
        <label>ProductEventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipLabel>EventRollbacks</relationshipLabel>
        <relationshipName>EventRollbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RollBackToEvent__c</fullName>
        <label>RollBackToEvent</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EventRollbacks</relationshipLabel>
        <relationshipName>EventRollbacks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RollbackEventName__c</fullName>
        <formula>RollBackToEvent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollbackEventName</label>
        <type>Text</type>
    </fields>
    <label>EventRollback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EventRollback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventRollbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>